# © RAiTHE INDUSTRIES INCORPORATED 2026
# crates/crawler — Async HTTP crawler with politeness, robots.txt, bandwidth throttling

[package]
name = "raithe-crawler"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Polite, bandwidth-aware async HTTP crawler for raithe-se"

[dependencies]
raithe-common = { path = "../common" }
raithe-metrics = { path = "../metrics" }
raithe-storage = { path = "../storage" }
raithe-parser = { path = "../parser" }
tokio.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
moka.workspace = true
tracing.workspace = true
url.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
thiserror.workspace = true
trust-dns-resolver.workspace = true
bytes.workspace = true
rand.workspace = true
