# © RAiTHE INDUSTRIES INCORPORATED 2026
# crates/metrics — Prometheus metrics registry, structured logging

[package]
name = "raithe-metrics"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Prometheus metrics and structured logging for raithe-se"

[dependencies]
raithe-common = { path = "../common" }
prometheus.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
axum.workspace = true
