# © RAiTHE INDUSTRIES INCORPORATED 2026
# crates/parser — HTML parsing, boilerplate removal, structural feature extraction

[package]
name = "raithe-parser"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "HTML parsing and content extraction for raithe-se"

[dependencies]
raithe-common = { path = "../common" }
lol_html.workspace = true
scraper.workspace = true
url.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
unicode-segmentation.workspace = true

[dev-dependencies]
proptest.workspace = true
