# © RAiTHE INDUSTRIES INCORPORATED 2026
# crates/query — Query understanding pipeline

[package]
name = "raithe-query"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Query parsing, spell correction, intent classification for raithe-se"

[dependencies]
raithe-common = { path = "../common" }
raithe-metrics = { path = "../metrics" }
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
unicode-segmentation.workspace = true
unicode-normalization.workspace = true
moka.workspace = true
