# © RAiTHE INDUSTRIES INCORPORATED 2026
# crates/storage — Local SSD storage, memory-mapped file access, segment lifecycle

[package]
name = "raithe-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Storage abstraction for raithe-se: local SSD, mmap, segment lifecycle"

[dependencies]
raithe-common = { path = "../common" }
raithe-metrics = { path = "../metrics" }
memmap2.workspace = true
bytes.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
rusqlite.workspace = true
zstd.workspace = true
flatbuffers.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.10"
